force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/Apttus_Approval__AdhocApprover__c.object-meta.xml
<CustomObject>
    <description>Defines approvers for an adhoc approval group</description>
    <label>Adhoc Approver</label>
    <nameField>
        <displayFormat>AA-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Adhoc Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>