force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__AdhocApprovalGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AdhocApprovalGroupId__c</fullName>
    <label>Adhoc Approval Group Id</label>
    <referenceTo>Apttus_Approval__AdhocApprovalGroup__c</referenceTo>
    <relationshipLabel>Adhoc Approvers</relationshipLabel>
    <relationshipName>AdhocApprovers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>