force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__ApproverSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__ApproverSequence__c</fullName>
    <label>Approver Sequence</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>