force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__AssigneeId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeId__c</fullName>
    <label>Assignee Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>