force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__AssigneeType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeType__c</fullName>
    <label>Assignee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Role</fullName>
            </value>
            <value>
                <fullName>Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>