force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__AssigneeValue__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AssigneeValue__c</fullName>
    <label>Assignee Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>