force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__AutoReapprovalEnabled__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__AutoReapprovalEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Reapproval Enabled</label>
    <type>Checkbox</type>
</CustomField>