force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__IsReviewer__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__IsReviewer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Reviewer</label>
    <type>Checkbox</type>
</CustomField>