force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/fields/Apttus_Approval__SendEmail__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Approval__SendEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Email</label>
    <type>Checkbox</type>
</CustomField>