force-app/main/default/objects/Apttus_Approval__AdhocApprover__c/listViews/Apttus_Approval__All.listView-meta.xml
<ListView>
    <fullName>Apttus_Approval__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus_Approval__AdhocApprovalGroupId__c</columns>
    <columns>Apttus_Approval__ApproverSequence__c</columns>
    <columns>Apttus_Approval__DependsOn__c</columns>
    <columns>Apttus_Approval__AssigneeType__c</columns>
    <columns>Apttus_Approval__AssigneeValue__c</columns>
    <columns>Apttus_Approval__AssigneeId__c</columns>
    <columns>Apttus_Approval__IsReviewer__c</columns>
    <columns>Apttus_Approval__AutoReapprovalEnabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>